Made all Repositories, added private constructor for User

--- a/DeratControl.Domain/DeratControl.Domain.csproj
+++ b/DeratControl.Domain/DeratControl.Domain.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Root\Repositories\FacilityRepository.cs" />
+    <Compile Remove="Root\Repositories\OrganizationRepository.cs" />
+    <Compile Remove="Root\Repositories\PerimeterRepository.cs" />
+    <Compile Remove="Root\Repositories\PointRepository.cs" />
+    <Compile Remove="Root\Repositories\ReviewRepository.cs" />
+    <Compile Remove="Root\Repositories\TrapRepository.cs" />
+    <Compile Remove="Root\Repositories\TrapReviewRepository.cs" />
+    <Compile Remove="Root\Repositories\UserRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Root\Repositories\" />
+  </ItemGroup>
 </Project>
