--- a/DeratControl.Ifrastructure/DeratControl.Infrastructure.csproj
+++ b/DeratControl.Ifrastructure/DeratControl.Infrastructure.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DeratControl.Domain\DeratControl.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
