Added middleware that will catch all exceptions and handle them. Also we can add our custmon exceptions and   return appropriate status code. Also added to project and configured Serilog

--- a/DeratControl.Domain/DeratControl.Domain.csproj
+++ b/DeratControl.Domain/DeratControl.Domain.csproj
@@ -17,4 +17,7 @@
   <ItemGroup>
     <Folder Include="Root\Repositories\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
+  </ItemGroup>
 </Project>
