--- a/DeratControl.Application/DeratControl.Application.csproj
+++ b/DeratControl.Application/DeratControl.Application.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DeratControl.Domain\DeratControl.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
