--- a/DeratControl.API/DeratControl.API.csproj
+++ b/DeratControl.API/DeratControl.API.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DeratControl.Application\DeratControl.Application.csproj" />
     <ProjectReference Include="..\DeratControl.Domain\DeratControl.Domain.csproj" />
   </ItemGroup>
 
