--- a/DeratControl.Application.Tests/DeratControl.Application.Tests.csproj
+++ b/DeratControl.Application.Tests/DeratControl.Application.Tests.csproj
@@ -8,10 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Moq" Version="4.12.0" />
+    <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DeratControl.Application\DeratControl.Application.csproj" />
+    <ProjectReference Include="..\DeratControl.Domain\DeratControl.Domain.csproj" />
   </ItemGroup>
 
 </Project>
