--- a/DeratControl.Security/DeratControl.Security.csproj
+++ b/DeratControl.Security/DeratControl.Security.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DeratControl.Domain\DeratControl.Domain.csproj" />
   </ItemGroup>
 
 </Project>
