--- a/DeratControl.API/appsettings.Development.json
+++ b/DeratControl.API/appsettings.Development.json
@@ -5,5 +5,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=MISHKACOMP;Initial Catalog=DeratControlDb;Integrated Security=True"
   }
 }
