--- a/DeratControl.Ifrastructure/DeratControl.Infrastructure.csproj
+++ b/DeratControl.Ifrastructure/DeratControl.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.6" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
   </ItemGroup>
 
