--- a/DeratControl.Application/DeratControl.Application.csproj
+++ b/DeratControl.Application/DeratControl.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Folder Include="Organizations\Queries\" />
+    <Folder Include="Points\Commands\" />
   </ItemGroup>
 
 </Project>
