--- a/DeratControl.API/DeratControl.API.csproj
+++ b/DeratControl.API/DeratControl.API.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\DeratControl.Security\DeratControl.Security.csproj" />    
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
