--- a/DeratControl.Application/DeratControl.Application.csproj
+++ b/DeratControl.Application/DeratControl.Application.csproj
@@ -15,6 +15,9 @@
   <ItemGroup>
     <Folder Include="Organizations\Queries\" />
     <Folder Include="Points\Commands\" />
+    <Folder Include="Review\Commands\" />
+    <Folder Include="TrapReviewImage\Commands\" />
+    <Folder Include="TrapReviewImage\Queries\" />
   </ItemGroup>
 
 </Project>
