--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,8 @@ $tf/
 # Guidance Automation Toolkit
 *.gpState
 
+appsetting.Development.json
+
 # ReSharper is a .NET coding add-in
 _ReSharper*/
 *.[Rr]e[Ss]harper
