--- a/DeratControl.API/appsettings.Development.json
+++ b/DeratControl.API/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MISHKACOMP;Initial Catalog=DeratControlDb;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-DKP9MK9\\SQLEXPRESS;Initial Catalog=DeratControlDb;Integrated Security=True"
   }
 }
