--- a/DeratControl.API/appsettings.Development.json
+++ b/DeratControl.API/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BIGBADTRUCK;Initial Catalog=DeratControlDb;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-RFL18N3;Initial Catalog=DeratControlDb;Integrated Security=True"
   }
 }
