--- a/DeratControl.API/appsettings.Development.json
+++ b/DeratControl.API/appsettings.Development.json
@@ -9,7 +9,7 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection": "Data Source=MISHKACOMP;Initial Catalog=DeratControlDb;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-G0H5FAS;Initial Catalog=DeratControlDb;Integrated Security=True"
 
   }
 }
